test/should-fail/vsgc2245.f3
/*
 * @test/compile-error
 */
var k = "a";
insert "V" into k;
